--- a/frontend/src/pages/PasswordReset.css
+++ b/frontend/src/pages/PasswordReset.css
@@ -1,107 +1,111 @@
 .password-reset-container {
-    font-family: 'Electrolize', sans-serif;
-    max-width: 400px;
-    margin: auto;
-    padding: 40px;
-    border: 3px solid #FF8C00;
-    border-radius: 5px;
-    background-color: rgba(47, 134, 166, 0.3);
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    min-height: 350px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-  }
-  
-  .password-reset-message {
-    margin-top: auto; 
-    text-align: center;
-    color: #fff;
-  }
-  
-  
-  
-  .password-reset-title {
-    text-align: center;
-    margin-bottom: 30px; 
-    font-size: 24px;
-    color: #fff;
-  }
-  
-  .password-reset-description {
-    margin-bottom: 20px; 
-    font-size: 16px;
-    color: #fff;
-  }
-  
-  .password-reset-form {
-    display: flex;
-    flex-direction: column;
-  }
-  
-  .password-reset-option {
-    margin-bottom: 20px; 
-    display: flex;
-    align-items: center;
-  }
-  
-  .password-reset-option input[type="radio"] {
-    margin-right: 50px;
-  }
-  .password-reset-option label {
-    margin-right: 25px; 
-  }
-  
-  .password-reset-input {
-    width: 80%; 
-    max-width: 230px; 
-    padding: 5px;
-    margin-bottom: 20px;
-    border: 1px solid #e28c1c;
-    border-radius: 3px;
-    font-size: 16px;
-    margin-left: auto; 
-    margin-right: auto; 
-    display: block; 
-  }
-  
-  .password-reset-input::placeholder {
-    color: #999;
-  }
-  
-  .password-reset-button,
-  .password-reset-cancel {
-    width: 100%;
-    padding: 10px;
-    border: none;
-    border-radius: 3px;
-    font-size: 16px;
-    cursor: pointer;
-    transition: background-color 0.3s;
-    margin-top: 4px;
-    margin-bottom: 10px;
-  }
-  
-  .password-reset-button {
-    background: linear-gradient(45deg, rgb(0, 110, 255), #ff8c00);
-    color: #fff;
-  }
-  
-  .password-reset-button:hover {
-    background-color: #0056b3;
-  }
-  
-  .password-reset-cancel {
-    background-color: #FF6347;
-    color: #fff;
-  }
-  
-  .password-reset-cancel:hover {
-    background-color: #FF4500;
-  }
-  
-  .password-reset-message {
-    margin-top: 20px;
-    text-align: center;
-    color: #fff;
-  }
+  font-family: 'Montserrat', sans-serif;
+  max-width: 400px;
+  margin: auto;
+  padding: 40px;
+  border: 3px solid #FF8C00;
+  border-radius: 10px;
+  background-color: rgba(47, 134, 166, 0.3);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  min-height: 350px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.password-reset-title {
+  font-size: 28px;
+  color: #FF8C00;
+  margin-bottom: 20px;
+}
+
+.password-reset-subtitle {
+  font-size: 14px; 
+  color: #f7f6f6;
+  margin-bottom: 15px;
+  text-align: justify; 
+}
+
+.password-reset-subtitle-2 {
+  font-size: 19px; 
+  color: #f7f6f6;
+  margin-bottom: 15px;
+  text-align: center; 
+}
+
+.password-reset-description {
+  font-size: 14px;
+  color: #777;
+  margin-bottom: 20px;
+}
+
+.password-reset-form {
+  width: 100%;
+}
+
+.password-reset-option {
+  margin-bottom: 15px;
+}
+
+.password-reset-option input[type="radio"] {
+  margin-right: 10px;
+}
+
+.password-reset-option label {
+  font-size: 16px;
+  color: #333;
+}
+
+.password-reset-input {
+  width: 80%;
+  max-width: 300px;
+  padding: 10px;
+  margin-bottom: 15px;
+  border: 2px solid #FF8C00;
+  border-radius: 5px;
+  font-size: 5px;
+  color: #333;
+  margin-left: 39px;
+}
+
+.password-reset-input::placeholder {
+  color: #999;
+}
+
+.password-reset-button,
+.password-reset-cancel {
+  width: 100%;
+  padding: 12px;
+  border: none;
+  border-radius: 5px;
+  font-size: 13px;
+  font-weight: bold;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.password-reset-button {
+  background: linear-gradient(45deg, rgb(0, 110, 255), #ff8c00);
+  color: #fff;
+  margin-bottom: 10px;
+}
+
+.password-reset-button:hover {
+  background-color: #0056b3;
+}
+
+.password-reset-cancel {
+  background-color: #FF6347;
+  color: #fff;
+}
+
+.password-reset-cancel:hover {
+  background-color: #FF4500;
+}
+
+.password-reset-message {
+  margin-top: auto;
+  text-align: center;
+  color: #777;
+  font-size: 12px;
+}
