--- a/frontend/src/pages/Register.css
+++ b/frontend/src/pages/Register.css
@@ -81,7 +81,7 @@
   width: 100%;
   padding: 10px;
   font-size: 16px;
-  background-color: rgba(0, 0, 0, 0.1); 
+  background-color: rgba(0, 0, 0, 0.1);
   color: white;
   border: none;
   border-radius: 4px;
@@ -129,14 +129,14 @@
   min-width: 150px;
   max-height: auto;
   margin-top: 20px;
-  margin-left: 150px; 
+  margin-left: 150px;
 }
 
 .error-message {
   color: white;
   margin-top: -8px;
   margin-bottom: 1px;
-  padding: 5px;  
+  padding: 5px;
 }
 
 .vendedor-section label {
@@ -147,17 +147,20 @@
   padding: 5px;
   margin-bottom: 5px;
   margin-right: 70px;
-  transition: background-color 0.3s ease, color 0.3s ease, opacity 0.3s ease; /* Añade transición para opacidad */
+  transition: background-color 0.3s ease, color 0.3s ease, opacity 0.3s ease;
+  /* Añade transición para opacidad */
   background: linear-gradient(45deg, rgb(0, 110, 255), #ff8c00);
   border-radius: 4px;
   cursor: pointer;
-  width: 50%; /* Ocupa todo el ancho del contenedor */
+  width: 50%;
+  /* Ocupa todo el ancho del contenedor */
   float: left;
 }
 
 /* Estilos para el checkbox */
 .vendedor-section input[type="checkbox"] {
-  transform: scale(2); /* Ajusta el tamaño del checkbox */
+  transform: scale(2);
+  /* Ajusta el tamaño del checkbox */
   margin-left: 15px;
   margin-top: 15px;
   cursor: pointer;
@@ -165,9 +168,11 @@
 }
 
 .vendedor-section label:hover {
-  background-color: rgba(0, 153, 255, 0.8); /* Hace el color de fondo semi-transparente */
+  background-color: rgba(0, 153, 255, 0.8);
+  /* Hace el color de fondo semi-transparente */
   color: #ECF0F1;
-  opacity: 1; /* Cambia la opacidad al pasar el mouse */
+  opacity: 1;
+  /* Cambia la opacidad al pasar el mouse */
 }
 
 
@@ -177,7 +182,8 @@
 
 .password-toggle {
   position: absolute;
-  right: 17px; /* Ajusta este valor según sea necesario */
+  right: 17px;
+  /* Ajusta este valor según sea necesario */
   top: 50%;
   transform: translateY(-50%);
   cursor: pointer;
@@ -230,28 +236,40 @@
 }
 
 .password-strength-indicator.weak {
-  background-color: #ff8080; 
+  background-color: #ff8080;
 }
 
 .password-strength-indicator.medium {
-  background-color: #ffd966; 
+  background-color: #ffd966;
 }
 
 .password-strength-indicator.strong {
-  background-color: #80d4ff; 
+  background-color: #80d4ff;
 }
 
 .password-strength-indicator.very-strong {
-  background-color: #00b300; 
+  background-color: #00b300;
 }
 
 .condiciones-section {
- margin-top: 15px;
- margin-bottom: 15px;
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
+
+.popup {
+  display: none;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: white;
+  border: 1px solid #ccc;
+  padding: 20px;
+  z-index: 1000;
 }
 
 .condiciones-section input[type="checkbox"] {
-  position: absolute; 
+  position: absolute;
   opacity: 0;
 }
 
@@ -262,27 +280,27 @@
   height: 14px;
   background-color: #ccc;
   border-radius: 3px;
-  margin-right: 10%; 
+  margin-right: 10%;
   margin-left: 1%;
 }
 
-.condiciones-section input[type="checkbox"]:checked + label .checkmark {
-  background-color: #007bff; 
+.condiciones-section input[type="checkbox"]:checked+label .checkmark {
+  background-color: #007bff;
 }
 
 .condiciones-section label {
-  cursor: pointer; 
-  color: #ffffff; 
+  cursor: pointer;
+  color: #ffffff;
   font-size: 13px;
   margin-top: 10px;
 }
 
 .condiciones-section label a {
-  color: #ffffff; 
+  color: #ffffff;
 }
 
 .condiciones-section label a:hover {
-  text-decoration: underline; 
+  text-decoration: underline;
 }
 
 .popup {
@@ -291,16 +309,16 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 500px; 
-  height: 290px;  
+  width: 500px;
+  height: 290px;
   background-color: white;
   border: 1px solid black;
   padding: 20px;
   color: black;
-  border-radius: 20px; 
+  border-radius: 20px;
 }
 
-.popup.show { 
+.popup.show {
   display: block;
 }
 
@@ -311,56 +329,48 @@
 }
 
 .popup-info p {
-    color: black;
-    text-align: justify;
-    line-height: 1.5; 
-    font-size: 14px;
-  }
-  
-
-  .popup-buttons {
-    display: flex;
-    justify-content: space-between;
-    margin-top: 20px;
-  }
-  
-  .popup-buttons button,
-  .popup-buttons a button[type="button"] {
-    padding: 10px 20px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    margin-right: 30px; 
-  }
-  
-  .popup-buttons button[type="button"] {
-    background-color: #ffffff;
-    color: rgb(67, 45, 229);
-    border: 2px solid rgb(67, 45, 229);
-    cursor: pointer;
-    padding: 10px 20px;
-    border-radius: 5px;
-    margin-left: 10px;
-  }
-  
-  .popup-buttons button[type="button"]:hover {
-    background-color: #ffffff;
-  }
-  
-  
-  .popup-buttons a {
-    text-decoration: none;
-  }
-  
-  .popup-buttons a button[type="button"] {
-    background: linear-gradient(to right, #007bff, #e0351f); 
-    color: white;
-  }
-  
+  color: black;
+  text-align: justify;
+  line-height: 1.5;
+  font-size: 14px;
+}
 
 
+.popup-buttons {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 20px;
+}
+
+.popup-buttons button,
+.popup-buttons a button[type="button"] {
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  margin-right: 30px;
+}
+
+.popup-buttons button[type="button"] {
+  background-color: #ffffff;
+  color: rgb(67, 45, 229);
+  border: 2px solid rgb(67, 45, 229);
+  cursor: pointer;
+  padding: 10px 20px;
+  border-radius: 5px;
+  margin-left: 10px;
+}
+
+.popup-buttons button[type="button"]:hover {
+  background-color: #ffffff;
+}
 
 
+.popup-buttons a {
+  text-decoration: none;
+}
 
-
-
+.popup-buttons a button[type="button"] {
+  background: linear-gradient(to right, #007bff, #e0351f);
+  color: white;
+}
