--- a/frontend/src/pages/PasswordReset.css
+++ b/frontend/src/pages/PasswordReset.css
@@ -9,6 +9,7 @@
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   min-height: 350px;
   display: flex;
+  font-size: 20px;
   flex-direction: column;
   align-items: center;
 }
