--- a/frontend/src/pages/ModalPassword.css
+++ b/frontend/src/pages/ModalPassword.css
@@ -1,3 +1,4 @@
+/*
 .modal-overlay {
     position: fixed;
     top: 0;
@@ -27,4 +28,5 @@
     font-size: 1.5rem;
     cursor: pointer;
   }
+  */
   
