--- a/frontend/src/components/ModalPassword.css
+++ b/frontend/src/components/ModalPassword.css
@@ -1,32 +1,118 @@
-/*
-.modal-overlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    z-index: 1050;
-  }
-  
-  .modal-container {
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 5px;
-    max-width: 500px;
-    min-width: 300px;
-    z-index: 1051;
-  }
-  
-  .modal-close-button {
-    float: right;
-    border: none;
-    background: none;
-    font-size: 1.5rem;
-    cursor: pointer;
-  }
-  */
-  
+/* ModalPassword.css */
+
+/* Estilos para el modal */
+.modalPassword {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  min-width: 500px;
+  height: 100%;
+  background-color: rgba(0, 0, 50, 0.5); /* Color azul marino con opacidad */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
+
+/* Estilos para el contenedor del modal */
+.modalPasswordContainer {
+  position: relative; /* Agregado: posición relativa para alinear el botón */
+  background-color: #0056b3; /* Color de fondo */
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5); /* Sombra */
+  max-width: 80%;
+}
+
+/* Estilos para el botón de cerrar */
+.modalPasswordClose {
+  position: absolute; /* Agregado: posición absoluta para alinear el botón */
+  top: 5px; /* Ajuste vertical para alinear el botón */
+  right: 5px; /* Ajuste horizontal para alinear el botón */
+  background-color: transparent;
+  border: none;
+  cursor: pointer;
+  font-size: 18px;
+  color: #333; /* Color de la X */
+}
+
+/* Estilos para el título del modal */
+.modalTitle {
+  font-size: 24px;
+  margin-bottom: 10px;
+  text-align: center;
+}
+
+/* Estilos para el párrafo del modal */
+.modalParagraph {
+  font-size: 16px;
+  margin-bottom: 20px;
+}
+
+/* Estilos para el input del modal */
+.modalInput {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-sizing: border-box;
+}
+
+/* Estilos para el botón del modal */
+.modalButton {
+  padding: 10px 20px;
+  background: linear-gradient(45deg, rgb(0, 110, 255), #ff8c00);
+  color: #fff; /* Texto en blanco */
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  margin: 0 auto; /* Centrar horizontalmente */
+  display: block; /* Hacer que el botón sea un bloque para aplicar márgenes */
+}
+
+.modalButton:disabled {
+  opacity: 0.6; /* Opacidad reducida cuando el botón está deshabilitado */
+  cursor: not-allowed; /* Cambia el cursor a 'no permitido' cuando el botón está deshabilitado */
+}
+
+
+/* Estilos para el título del modal de cambio de contraseña */
+.modalChangePasswordTitle {
+  font-size: 24px;
+  margin-bottom: 10px;
+  text-align: center;
+}
+
+/* Estilos para el párrafo del modal de cambio de contraseña */
+.modalChangePasswordParagraph {
+  font-size: 16px;
+  margin-bottom: 20px;
+}
+
+/* Estilos para el input del modal de cambio de contraseña */
+.modalChangePasswordInput {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 20px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  box-sizing: border-box;
+}
+
+/* Estilos para el botón del modal de cambio de contraseña */
+.modalChangePasswordButton {
+  padding: 10px 20px;
+  background-color: #007bff; /* Color azul marino */
+  color: #fff; /* Texto en blanco */
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+/* Estilos para el botón del modal de cambio de contraseña cuando se pasa el cursor sobre él */
+.modalChangePasswordButton:hover {
+  background-color: #0056b3; /* Color azul marino más oscuro */
+}
