--- a/frontend/src/pages/PasswordReset.css
+++ b/frontend/src/pages/PasswordReset.css
@@ -17,7 +17,7 @@
 .password-reset-title {
   font-size: 28px;
   color: #FF8C00;
-  margin-bottom: 20px;
+  margin-bottom: 2%;
 }
 
 .password-reset-subtitle {
@@ -61,12 +61,17 @@
   width: 80%;
   max-width: 300px;
   padding: 10px;
-  margin-bottom: 15px;
+  margin-bottom: 10%;
   border: 2px solid #FF8C00;
   border-radius: 5px;
   font-size: 16px;
   color: #333;
   margin-left: 39px;
+}
+
+.password-container{
+  display: flex;
+  max-height: 40px;
 }
 
 .password-reset-input::placeholder {
