--- a/frontend/src/pages/HomePage.css
+++ b/frontend/src/pages/HomePage.css
@@ -1,7 +1,7 @@
 body {
   background-color: black;
   font-family: 'Electrolize', sans-serif;
-  background-image: url("../imagenes/fondo.svg");
+  background-image: url("../imagenes/8992.jpg");
   background-repeat: no-repeat;
   background-size: cover;
 }
