--- a/frontend/src/pages/Advertisement/AdvertisementSection.css
+++ b/frontend/src/pages/Advertisement/AdvertisementSection.css
@@ -18,8 +18,10 @@
 }
   
   h1 {
+    text-shadow: none; /* Eliminar el efecto de sombra en el texto */
     color: rgb(255, 255, 255); /* Color del texto del encabezado */
     text-align: center; /* Alinear texto al centro */
+    font-family: 'Lato', sans-serif;
   }
   
   .p-anuncios {
