--- a/frontend/src/pages/Login.css
+++ b/frontend/src/pages/Login.css
@@ -1,20 +1,28 @@
 /* Estilos para el contenedor del formulario de inicio de sesión */
 .login-container {
   font-family: 'Electrolize', sans-serif;
-  max-width: 350px;
-  margin: 0 auto;
+  width: 35%;
+  min-width: 200px;
+  max-width: 450px;
+  margin: 2% auto;
   padding: 20px;
-  border: 3px solid #FF8C00;
+  border: 3px solid rgb(21, 115, 71);
   border-radius: 5px;
   background-color: rgba(47, 134, 166, 0.3);
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  height: 20%;
   min-height: 300px; 
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
 
-/* Estilos para el título del formulario */
+@media screen and (max-width: 768px) {
+  .login-container {
+    width: 70%;
+  }
+}
+
 .login-title {
   text-align: center;
   margin-bottom: 20px;
@@ -22,35 +30,39 @@
   color: #fff;
 }
 
-/* Estilos para los campos de entrada */
+.loginForm{
+  text-align: center;
+}
+
 .login-input {
   width: 95%;
   padding: 8px;
   margin-bottom: 15px;
-  border: 1px solid #e28c1c;
+  border: 1px solid rgb(21, 115, 71);
   border-radius: 3px;
   font-size: 16px;
+  text-align: center;
 }
 
 .login-input::placeholder {
   color: #999;
 }
 
-/* Estilos para el botón de inicio de sesión */
-.login-button {
-  width: 100%;
-  padding: 10px;
-  background: linear-gradient(45deg, rgb(0, 110, 255), #ff8c00);
-  border: none;
-  border-radius: 3px;
-  color: #fff;
-  font-size: 16px;
-  cursor: pointer;
-  transition: background-color 0.3s;
-  margin-top: 4px;
-  margin-bottom: 10px;
+.login-message{
+  background-color: rgba(128, 128, 128, 0.856);
+  margin: 3%;
+  padding: 2%;
+  border-radius: 20px;
 }
 
-.login-button:hover {
-  background-color: #0056b3;
+.breadcrumb{
+  color: rgb(2, 2, 2);
 }
+.breadcrumb a{
+text-decoration: none;
+color: white;
+}
+
+.breadcrumb a:hover{
+  color: rgb(0, 255, 149);
+  }
