--- a/frontend/src/components/ModalAddCategory.css
+++ b/frontend/src/components/ModalAddCategory.css
@@ -24,9 +24,9 @@ label {
 }
 
 .form-group-pair > div > input {
-  border: 1px solid #ced4da;
+  border: 0px solid #ced4da;
   border-radius: 0.25rem;
-  padding: 0.375rem 0.75rem;
+  padding: 0.395rem 0.75rem;
   margin-bottom: 0.5rem;
 }
 
@@ -41,8 +41,8 @@ label {
 
 .btn-file-container {
   padding: 0.5em;
-  background-color: #007bff;
-  border-color: #007bff;
+  background-color: seagreen;
+  border-color: seagreen transparent;
   color: #fff;
   border-radius: 0.25rem;
 }
@@ -54,7 +54,7 @@ label {
 .btn-save {
   width: 100%;
   height: 100%;
-  background: linear-gradient(45deg, orange, #ff8c00);
+  background: rgb(52, 109, 241);
   color: white;
   border-radius: 5px;
   padding: 10px 20px;
@@ -69,14 +69,15 @@ label {
 
 .btn-save-container {
   padding: 0.5em;
-  background-color: #007bff;
+  background-color: rgb(26, 4, 224);
   border-color: #007bff;
   color: #fff;
   border-radius: 0.25rem;
-}
+} 
 
 .btn-save-container:hover {
   cursor: pointer;
+  background-color: #0056b3;
 }
 
 .modal-content-product {
@@ -85,7 +86,7 @@ label {
   border-radius: 8px;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
   position: relative;
-  max-width: 400px;
+  max-width: 420px;
   color: white;
   z-index:100000;
 }
@@ -95,7 +96,7 @@ label {
   font-size: 2em;
   position: relative;
   bottom: 311px;
-  left: 383px;
+  left: 373px;
 }
 
 .modal-close-product:hover {
