--- a/frontend/src/components/ShoppingCart.css
+++ b/frontend/src/components/ShoppingCart.css
@@ -1,6 +1,13 @@
+.shopping-cart {
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 20px;
+  text-align: center; /* Centrar el contenido del carrito */
+}
+
 .shopping-cart-title {
   font-size: 24px;
-  color: #333;
+  color: #fffefe;
   margin-bottom: 20px;
 }
 
@@ -9,50 +16,43 @@
   border-radius: 5px;
   max-width: 250px;
   max-height: 35px;
-  margin: 10px;
-  border: 1px black solid;
+  margin: 10px auto; /* Centrar el campo de búsqueda y el select */
 }
 
 .shopping-cart-content {
   background-color: #f5f5f5;
   padding: 20px;
   border-radius: 4px;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 .show-products {
   display: grid;
-  grid-template-columns: 1200px;
-  grid-template-rows: auto;
-  grid-template-rows: 200px;
-  justify-content: center;
-  color: #f5f5f5;
+  grid-template-columns: repeat(auto-fit, minmax(calc(33.33% - 20px), 1fr)); /* Ajuste automático del número de productos por fila */
+  gap: 20px;
+  justify-content: center; /* Centrar los productos en el carrito */
 }
 
 .producto-cart {
-  align-items: center;
-  border-radius: 5px;
-  max-width: 1400px;
-  background-color: rgba(47, 134, 166, 0.3);
-  border: 1px solid orange;
-  margin-bottom: 10px;
-  display: grid;
-  grid-template-columns: auto auto auto auto;
-  grid-template-rows: auto;
+  border-radius: 9px;
+  background-color: rgb(255, 255, 255);
+  padding: 20px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  transition: box-shadow 0.3s;
+  text-align: center; /* Centrar el contenido de cada producto */
 }
 
-.img-product {
-  max-width: 200px;
-  max-height: auto;
+.img-product img {
+  width: 100%; /* Ajustar todas las imágenes al 100% del ancho del contenedor */
+  height: 300px; /* Ajustar la altura de todas las imágenes */
+  object-fit: cover; /* Ajustar el tamaño de la imagen para cubrir completamente el contenedor */
+  border-radius: 10px; /* Ajustar el radio de borde de las imágenes */
 }
 
-.img-product,
 .name-product,
 .price-product,
-.cantidad-product {
-  justify-content: baseline;
-  margin: -30px;
-  padding: -30px;
+.cantidad-product,
+.trash-bin-img {
+  margin-top: 5px;
 }
 
 .price-product {
@@ -60,26 +60,22 @@
 }
 
 .trash-bin-img {
-  display: inline-block;
-}
-
-.producto-cart img {
-  max-width: 120px;
-  border-radius: 10px;
-  margin: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .total-price {
+  margin-top: 5%;
   display: flex;
   justify-content: center;
   align-items: center;
   font-size: 18px;
-  margin-bottom: 20px;
-  border-radius: 5px;
-  padding: 10px 20px;
-  color: #ffffff;
-  background-color: rgba(47, 134, 166, 0.3);
-  border: 1px solid orange;
+  margin-bottom: 10px;
+  border-radius: 7px;
+  padding: 15px 10px;
+  color: #000000;
+  background-color: rgb(255, 255, 255);
   border-bottom-width: 5px;
   max-width: 300px;
   margin: 0 auto;
@@ -90,30 +86,17 @@
 }
 
 @media (max-width: 768px) {
-  .total-price {
-    font-size: 15px;
-    padding: 8px 16px;
-    max-width: 250px;
-  }
-}
-
-
-@media (max-width: 768px) {
-  .total-price {
-    font-size: 15px;
-    /* Reducir el tamaño de fuente en dispositivos más pequeños si es necesario */
-    padding: 8px 16px;
-    /* Ajustar el relleno para dispositivos más pequeños */
+  .producto-cart {
+    padding: 15px;
   }
 }
 
 .separador-p {
-  line-height: 0.3;
-  text-align: left;
+  line-height: 1.5;
 }
 
 .btn-buy {
-  background: linear-gradient(45deg, rgb(0, 149, 255), #ff0000);
+  background: linear-gradient(45deg, rgb(3, 212, 83),  rgb(3, 212, 47));
   color: #ffffff;
   border: none;
   padding: 14px 24px;
@@ -122,11 +105,8 @@
   transition: background-color 0.3s, box-shadow 0.3s;
   cursor: pointer;
   text-decoration: none;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-  display: block;
   max-width: 300px;
-  margin: 20px auto;
-  /* Este es el margen que ajustaremos */
+  margin: 20px auto; /* Centrar el botón */
 }
 
 .btn-buy i {
@@ -135,7 +115,7 @@
 }
 
 .btn-buy:hover {
-  background-color: #45a049;
+  background-color: #7cee82;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
@@ -147,8 +127,6 @@
   }
 }
 
-
-
 .btn-delete {
   max-width: 35px !important;
   border: none;
@@ -157,11 +135,11 @@
 }
 
 .btn-buy:hover {
-  background-color: #e4770a;
+  background-color: #51f2af;
 }
 
 .btn-buy:active {
-  background-color: #c97521;
+  background-color: #64ea81;
 }
 
 .cantidad-product {
@@ -184,28 +162,28 @@
 }
 
 .btn-add {
-  background-color: #ff5f6d;
+  background-color: seagreen;
 }
 
 .btn-add:hover {
-  background-color: #ff788c;
+  background-color: #4ae27d;
 }
 
 .btn-add:active {
-  background-color: #ff4857;
+  background-color: seagreen;
 }
 
 .btn-remove {
-  background-color: #ffa94d;
+  background-color: #f51818;
   margin-left: 10px;
 }
 
 .btn-remove:hover {
-  background-color: #ffc16b;
+  background-color: #f27474;
 }
 
 .btn-remove:active {
-  background-color: #ff9733;
+  background-color: #f52727;
 }
 
 .fa-icon-trash {
@@ -242,37 +220,13 @@
   text-align: center;
 }
 
-
-@media (max-width: 750px) {
-  .shopping-cart-title {
-    font-size: 18px;
-    margin-bottom: 15px;
-  }
-
-  .presentation,
-  .producto-cart,
-  .total-price {
-    margin: 15px;
-    max-width: 100%;
-  }
-
-  .presentation select,
-  .btn-add,
-  .btn-remove {
-    margin: 5px;
-  }
-
+@media (max-width: 850px) {
   .show-products {
-    grid-template-columns: repeat(auto-fit, minmax(120px, 1fr));
-  }
-
-  .producto-cart img {
-    max-width: 100px;
-    margin: 5px;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 2fr)); /* Ajuste automático del número de productos por fila */
   }
 }
 
-@media (max-width: 480px) {
+@media (max-width: 380px) {
   .shopping-cart-title {
     font-size: 16px;
     margin-bottom: 10px;
@@ -281,7 +235,7 @@
   .presentation,
   .producto-cart,
   .total-price {
-    margin: 10px;
+    margin: 10px auto; /* Centrar los contenedores */
   }
 
   .presentation select,
@@ -291,45 +245,6 @@
   }
 
   .show-products {
-    grid-template-columns: repeat(1, 1fr);
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); /* Ajuste automático del número de productos por fila */
   }
-
-  .producto-cart img {
-    max-width: 80px;
-    margin: 3px;
-  }
-}
-
-@media (max-width: 750px) {
-  .shopping-cart-title {
-    font-size: 16px;
-    margin-bottom: 10px;
-  }
-
-  .presentation,
-  .producto-cart,
-  .total-price {
-    margin: 10px;
-  }
-
-  .presentation select,
-  .btn-add,
-  .btn-remove {
-    margin: 3px;
-  }
-
-  .show-products {
-    grid-template-columns: repeat(1, 1fr);
-  }
-
-  .producto-cart img {
-    max-width: 80px;
-    margin: 3px;
-  }
-
-}
-
-p span {
-  display: block;
-  margin-bottom: 10px;
 }
