--- a/frontend/src/pages/UserList.css
+++ b/frontend/src/pages/UserList.css
@@ -1,3 +1,5 @@
+/* UserList.css */
+
 body {
     color: #fff;
 }
@@ -9,18 +11,18 @@ body {
     background-color: rgba(47, 134, 166, 0.3);
     border-radius: 5px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    border: 2px solid #FF8C00; /* Borde de 3px de ancho y color azul */
+    border: 2px solid #FF8C00;
 }
 
 .header-row-user-list {
     display: grid;
-    grid-template-columns: 3fr 3fr 3fr 3fr 3fr 3fr 3fr 3fr;
+    grid-template-columns: repeat(8, 1fr);
     font-weight: bold;
     margin-bottom: 15px;
     padding: 5px;
     text-align: center;
     border-bottom: 1px solid white;
-    cursor:pointer;
+    cursor: pointer;
 }
 
 .container-users {
@@ -30,13 +32,14 @@ body {
 
 .user {
     display: grid;
-    grid-template-columns: 3fr 3fr 3fr 3fr 3fr 3fr 3fr 3fr ;
+    grid-template-columns: repeat(8, 1fr);
     border: 1px solid orange;
     border-radius: 5px;
     padding: 10px;
     align-items: center;
     text-align: center;
-    gap: 1rem; /* Espacio entre columnas */
+    gap: 1rem;
+    color: #fffefe;
 }
 
 .user-image-list {
@@ -45,4 +48,4 @@ body {
     max-height: 100px;
     object-fit: cover;
     border-radius: 4px;
-  }
+}
