--- a/frontend/src/pages/UserList.css
+++ b/frontend/src/pages/UserList.css
@@ -23,6 +23,7 @@ body {
     text-align: center;
     border-bottom: 1px solid white;
     cursor: pointer;
+    color: #fff;
 }
 
 .container-users {
@@ -48,4 +49,36 @@ body {
     max-height: 100px;
     object-fit: cover;
     border-radius: 4px;
+}
+
+/* Styles for pagination */
+.pagination {
+    display: flex;
+    justify-content: center;
+    padding: 20px 0;
+    list-style-type: none;
+}
+
+.pagination li {
+    margin: 0 5px;
+}
+
+.pagination a {
+    color: #fff; /* Color blanco para los números de paginación */
+    padding: 10px 15px;
+    text-decoration: none;
+    background-color: #007bff;
+    border-radius: 5px;
+    border: 1px solid #007bff;
+    cursor: pointer;
+}
+
+.pagination a:hover {
+    background-color: #0056b3;
+    border-color: #0056b3;
+}
+
+.pagination .active a {
+    background-color: #0056b3;
+    border-color: #0056b3;
 }
