--- a/frontend/src/pages/UserList.css
+++ b/frontend/src/pages/UserList.css
@@ -50,7 +50,7 @@ body {
     object-fit: cover;
     border-radius: 4px;
 }
-
+ /*Pagination */
 /* Styles for pagination */
 .pagination {
     display: flex;
@@ -64,21 +64,21 @@ body {
 }
 
 .pagination a {
-    color: #fff; /* Color blanco para los números de paginación */
+    color: #fff;
     padding: 10px 15px;
     text-decoration: none;
-    background-color: #007bff;
+    background-color: #00ff40;
     border-radius: 5px;
-    border: 1px solid #007bff;
+    border: 1px solid #00ff0d;
     cursor: pointer;
 }
 
 .pagination a:hover {
-    background-color: #0056b3;
-    border-color: #0056b3;
+    background-color: #00b345;
+    border-color: #00b30f;
 }
 
 .pagination .active a {
-    background-color: #0056b3;
-    border-color: #0056b3;
+    background-color: #00b345;
+    border-color: #00b30f;
 }
