--- a/frontend/src/pages/SalesPage.css
+++ b/frontend/src/pages/SalesPage.css
@@ -1,15 +1,3 @@
-.ul-customers {
-  list-style: none;
-  background-color: rgba(47, 134, 166, 0.3);
-  padding: 20px;
-  margin: 0;
-}
-
-.li-customers {
-  background-color: rgba(47, 134, 166, 0.3);
-  padding: 20px;
-}
-
 .fa-user-customer {
   font-size: 2em;
 }
@@ -22,14 +10,16 @@
 }
 
 .sales-list {
+  background-color: rgba(47, 134, 166, 0.3);
+  padding: 20px;
   list-style: none;
-  padding: 0;
-  margin: 0;
 }
 
 .sales-item {
-  padding: 10px;
-  border-bottom: 1px solid #ddd;
+  background-color: rgba(47, 134, 166, 0.3);
+  border: 1px solid #ddd;
+  margin-bottom: 10px;
+  padding: 20px;
   transition: background-color 0.3s;
 }
 
@@ -40,25 +30,13 @@
 .sale-link {
   text-decoration: none;
   color: #333;
-}
-  
-
-/* ESTILOS DE GPT*/
-
-.li-customers {
-  border: 1px solid #ddd;
-  margin-bottom: 10px;
-  grid-gap: 10px;
-  align-items: center;
-}
-
-.li-customers > a {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  text-decoration: none;
+  grid-template-columns: auto 1fr;
+  gap: 10px;
+  align-items: center;
   transition: color 0.3s ease;
 }
 
-.li-customers > a:hover {
+.sale-link:hover {
   color: #007bff;
 }
