--- a/frontend/src/components/ModalAddProducts.css
+++ b/frontend/src/components/ModalAddProducts.css
@@ -1,106 +1,126 @@
-.modal-form {
+.btn-add-container {
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.filter-row {
+  margin: 20px 0;
   display: flex;
-  flex-direction: column;
+  justify-content: center;
   align-items: center;
 }
 
-.form-group-pair {
+.filter-row label {
+  margin-right: 10px;
+}
+
+.table th,
+.table td {
+  text-align: center;
+  vertical-align: middle;
+}
+
+.table img.min-max-img {
+  max-width: 100px;
+  max-height: 100px;
+}
+
+.pagination {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 20px 0;
+}
+
+.modal-header {
+  background-color: #007bff;
+  color: white;
+}
+
+.modal-title {
+  margin: 0 auto;
+}
+
+.modal-body {
+  padding: 20px;
+}
+
+.modal-footer {
   display: flex;
   justify-content: space-between;
-  width: 100%;
 }
 
-.form-group-pair > div {
-  display: flex;
-  width: 45%;
-  flex-direction: column;
+.form-control.is-invalid {
+  border-color: #dc3545;
 }
 
-label {
-  font-weight: bold;
-  margin-top: 5px;
-  margin-bottom: 0.5rem;
-  margin-left: 5px;
+.invalid-feedback {
+  display: block;
 }
 
-.form-group-pair > div > input {
-  border: 1px solid #ced4da;
-  border-radius: 0.25rem;
-  padding: 0.375rem 0.75rem;
-  margin-bottom: 0.5rem;
+.container-products {
+  color: black;
+  margin: 10px 50px;
 }
 
-.form-group {
-  display: flex;
-  flex-direction: column;
+.actions-container .fa-icon-edit,
+.actions-container .fa-icon-trash {
+  cursor: pointer;
+  margin: 0 10px;
 }
 
-.img-input {
-  display: none;
-}
-
-.btn-file-container {
-  padding: 0.5em;
-  background-color: #007bff;
-  border-color: #007bff;
-  color: #fff;
-  border-radius: 0.25rem;
-}
-
-.btn-file-container:hover {
+.category {
+  padding: 10px;
+  border: 1px solid #ccc;
+  margin-bottom: 10px;
+  border-radius: 5px;
   cursor: pointer;
 }
 
-.btn-save {
-  width: 100%;
-  height: 100%;
-  background: linear-gradient(45deg, orange, #ff8c00);
+.category.selected {
+  background-color: blue;
+  color: white;
+}
+
+.header-row-category-list {
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
+  background-color: #007bff;
   color: white;
   border-radius: 5px;
-  padding: 10px 20px;
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.4);
-  transition: all 0.3s ease;
-  border-width: 0px;
-  top: 80%;
-  font-size: 19px;
-  margin: 5px;
-  padding: 5px;
+  margin-bottom: 10px;
 }
 
-.btn-save-container {
-  padding: 0.5em;
+.filter-row {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.filter-row input {
+  margin-left: 10px;
+}
+
+.pagination {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 20px 0;
+}
+
+.pagination button {
+  margin: 0 5px;
+}
+
+.table {
+  margin-top: 20px;
+}
+
+.btn-add-product,
+.btn-add-product:hover {
   background-color: #007bff;
   border-color: #007bff;
-  color: #fff;
-  border-radius: 0.25rem;
-}
-
-.btn-save-container:hover {
-  cursor: pointer;
-}
-
-.modal-content-product {
-  background-color: rgba(47, 134, 166);
-  padding: 20px;
-  border-radius: 8px;
-  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
-  position: relative;
-  max-width: 400px;
   color: white;
-  z-index:100000 !important;
-}
-
-.modal-close-product-list {
-  font-weight: bold;
-  font-size: 2em;
-  position: relative;
-  float:right;
-}
-
-.modal-close-product-list:hover {
-  cursor: pointer;
-}
-
-.select2-vendedor {
-  padding: 50px;
 }
